added reset css file

--- a/index.html
+++ b/index.html
@@ -1,45 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- BOOTSTRAP LINK -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet" type="text/css"/>
-    <title>Document</title>
-</head>
-<body>
-    <nav>
-        <img src="images/homeIcon.svg" alt="">
-        <ul>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <!-- BOOTSTRAP LINK -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <link href="reset.css" rel="stylesheet" type="text/css"/>
+      <link href="style.css" rel="stylesheet" type="text/css"/>
+      <title>Document</title>
+   </head>
+   <body>
+      <nav>
+         <img src="images/homeIcon.svg" alt="">
+         <ul>
             <li><a href="">Why Us</a></li>
             <li><a href="">Book Appoitment</a></li>
-        </ul>
-    </nav>
-        <section>
-        <h1>Live Better Now</h1>
-        <p>My approach helps you feel more connected to yourself again - your needs, 
+         </ul>
+      </nav>
+      <section>
+         <h1>Live Better Now</h1>
+         <p>My approach helps you feel more connected to yourself again - your needs, 
             wants, values, and strengths. We’ll work through what is in the way of 
             asserting these valuable, important parts of who you are.  When you are 
             more connected to yourself, you often experience relief from psychological
-            problems such as depression and anxiety. </p>
-        </section>
-       <section>
-           <img src="" alt="">
-           <p>Family and group therapy available </p>
-       </section>
-       <section>
-            <img src="" alt="">
-            <p>Learn to cope with everyday struggles</p>
-        </section>
-        <section>
-                <img src="" alt="">
-                <p>Guided meditation and breathing exercises </p>
-        </section>
-        <!-- BOOTSTRAP STUFF -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+            problems such as depression and anxiety. 
+         </p>
+      </section>
+      <section>
+         <img src="" alt="">
+         <p>Family and group therapy available </p>
+      </section>
+      <section>
+         <img src="" alt="">
+         <p>Learn to cope with everyday struggles</p>
+      </section>
+      <section>
+         <img src="" alt="">
+         <p>Guided meditation and breathing exercises </p>
+      </section>
+      <ul>
+         <li><article><p>What to know about waking
+                up with anxiety </p></article></li>
+        <li><article><p>What to do if you feel 
+                people hate you</p></article></li>
+        <li><article><p>More evidence pets benefit 
+                mental health</p></article></li>
+      </ul>
+      <a href="">Why Us</a>
+      <a href="">Book Appointment</a>
+      <footer>
+          <p>1234 Main St Portland Oregon</p>
+          <img src="images/homeIcon.svg" alt="">
+          <p>888-888-8888</p>
+      </footer>
+      <!-- BOOTSTRAP STUFF -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+   </body>
 </html>
