bootstrap grid used to position three sections across page

--- a/index.html
+++ b/index.html
@@ -27,18 +27,21 @@
             problems such as depression and anxiety. 
          </p>
       </section>
-      <section>
-         <img src="" alt="">
-         <p>Family and group therapy available </p>
-      </section>
-      <section>
-         <img src="" alt="">
-         <p>Learn to cope with everyday struggles</p>
-      </section>
-      <section>
-         <img src="" alt="">
-         <p>Guided meditation and breathing exercises </p>
-      </section>
+      <!-- BOOTSTRAP GRID -->
+      <div class="row">
+         <section class="col">
+            <img src="images/family.svg" alt="">
+            <p>Family and group therapy available </p>
+         </section>
+         <section class="col">
+            <img src="images/sun.svg" alt="">
+            <p>Learn to cope with everyday struggles</p>
+         </section>
+         <section class="col">
+            <img src="images/meditation.svg" alt="">
+            <p>Guided meditation and breathing exercises </p>
+         </section>
+      </div>
       <ul>
          <li><article><p>What to know about waking
                 up with anxiety </p></article></li>
