--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <!-- BOOTSTRAP LINK -->
+      <link rel="stylesheet" href="https://use.typekit.net/abc1dyf.css">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link href="reset.css" rel="stylesheet" type="text/css"/>
       <link href="style.css" rel="stylesheet" type="text/css"/>
       <title>Document</title>
    </head>
    <body>
-      <nav>
-         <img src="images/homeIcon.svg" alt="">
-         <ul>
-            <li><a href="">Why Us</a></li>
-            <li><a href="">Book Appoitment</a></li>
+      <nav class='navbar'>
+         <img class='navbar-brand'src="images/homeIcon.svg" alt="">
+         <ul class="nav justify-content-end">
+            <li class="nav-item "><a class='nav-link active' href="">Why Us</a></li>
+            <li class="nav-item "><a class='nav-link active' href="">Book Appoitment</a></li>
          </ul>
       </nav>
-      <section>
-         <h1>Live Better Now</h1>
-         <p>My approach helps you feel more connected to yourself again - your needs, 
+      <section class="row">
+         <div id="h1Con" class="col">
+            <h1 class="display-4">Live Better Now</h1>
+         </div>
+         <p id="reason" class="col">My approach helps you feel more connected to yourself again - your needs, 
             wants, values, and strengths. We’ll work through what is in the way of 
             asserting these valuable, important parts of who you are.  When you are 
             more connected to yourself, you often experience relief from psychological
@@ -29,15 +32,15 @@
       </section>
       <!-- BOOTSTRAP GRID -->
       <div class="row">
-         <section class="col">
+         <section class="col iconCol">
             <img src="images/family.svg" alt="">
             <p>Family and group therapy available </p>
          </section>
-         <section class="col">
+         <section class="col iconCol">
             <img src="images/sun.svg" alt="">
             <p>Learn to cope with everyday struggles</p>
          </section>
-         <section class="col">
+         <section class="col iconCol">
             <img src="images/meditation.svg" alt="">
             <p>Guided meditation and breathing exercises </p>
          </section>
