Added contact page google maps added with form

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
       <title>Document</title>
    </head>
    <body>
-      <div id="wrapper">
          <nav class='navbar'>
             <a href="index.html"><img class='navbar-brand'src="images/homeIcon.svg" alt="Logo"></a>
             <ul class="nav justify-content-end">
                <li class="nav-item "><a class='nav-link active' href="WhyUs.html">Why Us</a></li>
-               <li class="nav-item "><a class='nav-link active' href="">Book Appoitment</a></li>
+               <li class="nav-item "><a class='nav-link active' href="Contact.html">Book Appoitment</a></li>
             </ul>
          </nav>
          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -94,14 +93,13 @@
          </div>
          <div id="bottomnav">
             <a href="WhyUs.html">Why Us</a>
-            <a href="">Book Appointment</a>
+            <a href="Contact.html">Book Appointment</a>
          </div>
          <footer>
             <p>1234 Main St Portland Oregon</p>
             <img src="images/homeIcon.svg" alt="">
             <p>888-888-8888</p>
          </footer>
-      </div>
       <!-- BOOTSTRAP STUFF -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
