--- a/WhyUs.html
+++ b/WhyUs.html
@@ -16,7 +16,7 @@
             <a href="index.html"><img class='navbar-brand'src="images/homeIcon.svg" alt=""></a>
                 <ul class="nav justify-content-end">
                    <li class="nav-item "><a class='nav-link active' href="WhyUs.html">Why Us</a></li>
-                   <li class="nav-item "><a class='nav-link active' href="">Book Appoitment</a></li>
+                   <li class="nav-item "><a class='nav-link active' href="Contact.html">Book Appoitment</a></li>
                 </ul>
              </nav>
         <article id='whyUS'>
