--- a/WhyUs.html
+++ b/WhyUs.html
@@ -19,23 +19,29 @@
                    <li class="nav-item "><a class='nav-link active' href="Contact.html">Book Appoitment</a></li>
                 </ul>
              </nav>
+             <div id='shadowWhyus'>
+            </div>
         <article id='whyUS'>
                 <h2>Why Us</h2>
                 <p>I am counselor and have been practicing counseling for 
               over 10 years. I have experience working with a diverse 
               group of clients with respect to presenting concerns, gender,
-               sexual orientation, and race ethnicity. I have particular research and clinical expertise in authenticity with one’s self and in relationships, interpersonal communication, and issues of sexual orientation, gender, and sexuality.
+               sexual orientation, and race ethnicity. I have particular research and clinical expertise in authenticity with one’s self and in relationships, interpersonal communication, and issues of sexual orientation, gender, and sexuality. Therapy will create a space that invites, expects, and is quite purposely designed for frank, probing, and revealing dialogue. It’s a safe space for clients to express themselves honestly, get to understand their true feelings, and work with the therapist to figure out how to use that information in their journey toward healing.
               </p>
+              <img src="images/water.jpg"alt='water' width="450px" height="200px">
               </article>
+            <div class="shadowServ">
               <article id='services'>
                 <h2>Services</h2>
-                <ul>
-                  <li>Solo Session</li>
-                  <li>Group therapy</li>
-                  <li>Family Therapy</li>
-                  <li>LGBT support</li>
+                <ul class='list-group'>
+                  <li class="list-group-item">Solo Session</li>
+                  <li class="list-group-item">Group therapy</li>
+                  <li class="list-group-item">Family Therapy</li>
+                  <li class="list-group-item">LGBT support</li>
                 </ul>
+                <img src="images/waterr23.jpg"alt='water' width="450px" height="200px">
               </article>
+            </div>
               <footer>
                     <p>1234 Main St Portland Oregon</p>
                     <img src="images/homeIcon.svg" alt="">
