--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    </head>
    <body>
          <nav class='navbar'>
-            <a href="index.html"><img class='navbar-brand'src="images/homeIcon.svg" alt="Logo"></a>
+            <a href="index.html"><img class='navbar-brand' src="images/homeIcon.svg" alt="Logo"></a>
             <ul class="nav justify-content-end">
                <li class="nav-item "><a class='nav-link active' href="WhyUs.html">Why Us</a></li>
                <li class="nav-item "><a class='nav-link active' href="Contact.html">Book Appoitment</a></li>
@@ -22,13 +22,13 @@
          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img class="d-block w-100" class="img-fluid" height="550px" src="images/carosel04.jpg">
+                  <img class="d-block w-100"class="img-fluid" height=550px src="images/carosel04.jpg" alt="First">
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100" class="img-fluid" height="550px" src="images/carosel02.jpg" alt="Second slide">
+                  <img class="d-block w-100" class="img-fluid" height=550px src="images/carosel02.jpg" alt="Second slide">
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100"class="img-fluid" height="550px" src="images/carosel03.jpg" alt="Third slide">
+                  <img class="d-block w-100"class="img-fluid" height=550px src="images/carosel03.jpg" alt="Third slide">
                </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -40,53 +40,52 @@
             <span class="sr-only">Next</span>
             </a>
          </div>
-         <section class="row">
-            <div id="h1Con" class="col">
-               <h1 class="display-4">Live Better Now</h1>
+         <div class="contain01">
+            <section class="row">
+               <div id="h1Con" class="col">
+                  <h1 class="display-4">Live Better Now</h1>
+               </div>
+               <p id="reason" class="col">My approach helps you feel more connected to yourself again - your needs, 
+                  wants, values, and strengths. We’ll work through what is in the way of 
+                  asserting these valuable, important parts of who you are.  When you are 
+                  more connected to yourself, you often experience relief from psychological
+                  problems such as depression and anxiety. 
+               </p>
+            </section>
+            <!-- BOOTSTRAP GRID -->
+            <div class="row" id="keyvalueicons">
+               <section class="col iconCol">
+                  <img src="images/family.svg" alt="">
+                  <p>Family and group therapy available </p>
+               </section>
+               <section class="col iconCol">
+                  <img src="images/sun.svg" alt="">
+                  <p>Learn to cope with everyday struggles</p>
+               </section>
+               <section class="col iconCol">
+                  <img src="images/meditation.svg" alt="">
+                  <p>Guided meditation and breathing exercises </p>
+               </section>
             </div>
-            <p id="reason" class="col">My approach helps you feel more connected to yourself again - your needs, 
-               wants, values, and strengths. We’ll work through what is in the way of 
-               asserting these valuable, important parts of who you are.  When you are 
-               more connected to yourself, you often experience relief from psychological
-               problems such as depression and anxiety. 
-            </p>
-         </section>
-         <!-- BOOTSTRAP GRID -->
-         <div class="row" id="keyvalueicons">
-            <section class="col iconCol">
-               <img src="images/family.svg" alt="">
-               <p>Family and group therapy available </p>
-            </section>
-            <section class="col iconCol">
-               <img src="images/sun.svg" alt="">
-               <p>Learn to cope with everyday struggles</p>
-            </section>
-            <section class="col iconCol">
-               <img src="images/meditation.svg" alt="">
-               <p>Guided meditation and breathing exercises </p>
-            </section>
          </div>
          <div id="linkarticles">
             <ul>
                <article>
                   <li>
-                     <p>What to know about waking
-                        up with anxiety 
-                     </p>
+                     <a href="https://www.medicalnewstoday.com/articles/325808.php">  What to know about waking
+                        up with anxiety </a>
                   </li>
                </article>
                <article>
                   <li>
-                     <p>What to do if you feel 
-                        people hate you
-                     </p>
+                     <a href="https://www.medicalnewstoday.com/articles/325705.php">What to do if you feel 
+                        people hate you</a>
                   </li>
                </article>
                <article>
                   <li>
-                     <p>More evidence pets benefit 
-                        mental health
-                     </p>
+                     <a href="https://www.medicalnewstoday.com/articles/325795.php">More evidence pets benefit 
+                        mental health</a>
                   </li>
                </article>
             </ul>
