--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img class="d-block w-100"class="img-fluid" height=550px src="images/carosel04.jpg" alt="First">
+                  <img class="d-block w-100" class="img-fluid" height="550" src="images/carosel04.jpg" alt="First">
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100" class="img-fluid" height=550px src="images/carosel02.jpg" alt="Second slide">
+                  <img class="d-block w-100" class="img-fluid" height="550" src="images/carosel02.jpg" alt="Second slide">
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100"class="img-fluid" height=550px src="images/carosel03.jpg" alt="Third slide">
+                  <img class="d-block w-100" class="img-fluid" height="550" src="images/carosel03.jpg" alt="Third slide">
                </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -70,24 +70,18 @@
          </div>
          <div id="linkarticles">
             <ul>
-               <article>
                   <li>
                      <a href="https://www.medicalnewstoday.com/articles/325808.php">  What to know about waking
                         up with anxiety </a>
                   </li>
-               </article>
-               <article>
-                  <li>
+                  <li id="cat">
                      <a href="https://www.medicalnewstoday.com/articles/325705.php">What to do if you feel 
-                        people hate you</a>
+                        your friends hate you</a>
                   </li>
-               </article>
-               <article>
                   <li>
                      <a href="https://www.medicalnewstoday.com/articles/325795.php">More evidence pets benefit 
                         mental health</a>
                   </li>
-               </article>
             </ul>
          </div>
          <div id="bottomnav">
