Google maps much more mobile friendlt and adaptive

--- a/WhyUs.html
+++ b/WhyUs.html
@@ -42,7 +42,7 @@
                 <img src="images/waterr23.jpg"alt='water' width="450px" height="200px">
               </article>
             </div>
-              <footer>
+              <footer id="footer">
                     <p>1234 Main St Portland Oregon</p>
                     <img src="images/homeIcon.svg" alt="">
                     <p>888-888-8888</p>
