Small layout changes more media breakpoints

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </a>
          </div>
          <div class="contain01">
-            <section class="row">
+            <section id="hook" class="row">
                <div id="h1Con" class="col">
                   <h1 class="display-4">Live Better Now</h1>
                </div>
