--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <body>
          <nav class='navbar'>
             <a href="index.html"><img class='navbar-brand' src="images/homeIcon.svg" alt="Logo"></a>
+            <h1 id="navh1">Cary Coll</h1>
             <ul class="nav justify-content-end">
                <li class="nav-item "><a class='nav-link active' href="WhyUs.html">Why Us</a></li>
                <li class="nav-item "><a class='nav-link active' href="Contact.html">Book Appoitment</a></li>
